# trading

./: docker-compose.yml
.trae/documents/: backend_test.md  data_system_design_backend.md  data_system_prd.md  data_system_requirements.md  data_system_tasks.md  design_backend.md  qa_test.md  quantitative_system_design_backend.md  quantitative_system_prd.md  quantitative_system_requirements.md  quantitative_system_tasks.md  requirements.md  tasks.md
.trae/rules/: project_rules.md
data-collection-system/: .gitignore  README.md  docker-compose.yml  go.mod  go.sum  main.go
data-collection-system/api/cron/: README.md  config.go  cron.go
data-collection-system/api/http/: routes.go
data-collection-system/biz/: data_pipeline.go  example.go  news_pipeline.go  orchestrator.go  task_executor.go
data-collection-system/biz/processing/: nlp_processor.go  quality_checker.go  service.go
data-collection-system/configs/: config.yaml  redis.conf
data-collection-system/docs/api/: README.md  openapi.yaml
data-collection-system/internal/cache/: redis.go
data-collection-system/internal/config/: config.go
data-collection-system/internal/dao/: macro_data_dao.go  market_data_dao.go  news_data_dao.go  stock_dao.go
data-collection-system/internal/database/: database.go
data-collection-system/internal/models/: data_task.go  financial_data.go  macro_data.go  market_data.go  models.go  news_data.go  stock.go
data-collection-system/internal/router/: router.go
data-collection-system/model/: data_task.go  financial_data.go  macro_data.go  market_data.go  models.go  news_data.go  sentiment_data.go  stock.go
data-collection-system/pkg/client/: .gitkeep  tushare.go
data-collection-system/pkg/config/: config.go
data-collection-system/pkg/database/: database.go
data-collection-system/pkg/errors/: errors.go
data-collection-system/pkg/logger/: logger.go
data-collection-system/pkg/response/: response.go
data-collection-system/pkg/validator/: validator.go
data-collection-system/repo/mysql/: dao_manager.go  data_task.go  data_task_dao.go  financial_data.go  financial_data_dao.go  interfaces.go  macro_data.go  macro_data_dao.go  market_data.go  market_data_dao.go  news.go  news_data_dao.go  repository_manager.go  sentiment.go  stock.go  stock_dao.go
data-collection-system/repo/redis/: README.md  redis.go
data-collection-system/scripts/migration/: 001_create_tables.sql
data-collection-system/service/collection/: service.go  (+4 more)
data-collection-system/test/: db_test.go
docs/: data_requirement_analysis.md  news_data_acquisition_plan.md  news_sentiment_data_model.py  quantitative_financial_indicators.md  strategy_flowchart.md  temp.md  trading_strategies.md
quantitative-system/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  main.py  mypy.ini  pyproject.toml  quality_report.json
quantitative-system/.github/workflows/: ci.yml
quantitative-system/alembic/: env.py
quantitative-system/alembic/versions/: 1d5a4fa0b442_add_financial_data_and_sentiment_.py  8518750f9dbe_initial_migration_with_data_acquisition_.py
quantitative-system/api/routes/: __init__.py  collection.py  news.py  stocks.py
quantitative-system/biz/: backtest_orchestrator.py  base_orchestrator.py  data_collection_orchestrator.py  nlp_processing_orchestrator.py  plan_orchestrator.py  position_orchestrator.py
quantitative-system/clients/: __init__.py  data_collection_client.py  news_crawler.py  tushare_client.py
quantitative-system/config/: database.py  settings.py
quantitative-system/docs/: code_quality.md
quantitative-system/models/: __init__.py  database.py  enums.py  schemas.py  types.py
quantitative-system/repositories/: __init__.py  backtest_repo.py  base_repo.py  cache_repo.py  news_repo.py  plan_repo.py  position_repo.py  stock_repo.py  task_repo.py
quantitative-system/scheduler/: __init__.py  jobs.py  manager.py  scheduler.py
quantitative-system/scripts/: init_database.py  quality_report.py  setup_dev.py
quantitative-system/services/: ai_service.py  backtest_service.py  collection_service.py  data_service.py  factor_service.py  nlp_service.py  plan_service.py  position_service.py  quality_service.py  query_service.py
quantitative-system/strategies/: __init__.py  base_strategy.py  bollinger_strategy.py  ma_strategy.py  macd_strategy.py  multi_factor_strategy.py  risk_management.py  rsi_strategy.py  strategy_registry.py  triple_ma_strategy.py
quantitative-system/utils/: exceptions.py  finbert_client.py  helpers.py  logger.py  text_processor.py  validators.py
scripts/migration/: 01_init_database.sql
(+28 files in other folders)
