[project]
name = "quantitative-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.0",
    "backtrader>=1.9.78.123",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.42",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
